@@ -411,5 +411,21 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>jdk16plus</id>
+            <activation>
+                <jdk>[16,)</jdk>
+            </activation>
+            <modules>
+                <module>server/integration-tests-jdk16</module>
+            </modules>
+            <properties>
+                <!-- FIXME: hack to allow powerannotations TCK to pass on JDK 16 -->
+                <powerannotations.tck.argLine>--add-opens java.base/java.util=ALL-UNNAMED</powerannotations.tck.argLine>
+                <!-- FIXME: find out why Gradle build doesn't work on JDK 16 in GH actions,
+                        but seems to work locally -->
+                <skip.gradle.build>true</skip.gradle.build>
+            </properties>
+        </profile>
     </profiles>
 </project>
